--- a/Shop.app/Shop.app.csproj
+++ b/Shop.app/Shop.app.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\shop.shared\shop.shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\" />
+  </ItemGroup>
+
 </Project>
